# MaskNet-based-PostureEstimationMethodForRobotVisionSystems

./: CMakeLists.txt  README.md  dataset_transform.py  kalman_estimate.py  kalman_mask.pcd  no_kalman_mask.pcd  trainning_modelnet.py
scripts/: Registration_SVD.py  camera_to_xarm6eef_broadcaster.py  kalman_estimate.py  mask_var.py  pose_graph.py  pose_list.py  posture_service.py  rmse.py  var.py
scripts/srv/: trigger_posture.srv
src/: noise_filter.cpp
